--- a/sahuang-imageEncryption/upload.html
+++ b/sahuang-imageEncryption/upload.html
@@ -9,17 +9,20 @@
 </head>
 <body class="text-white bg-zinc-800">
     <div class="container px-4 mx-auto text-center">
-        <h1 class="my-16 text-6xl font-bold text-center">Encryption result</h1>
-        <div class="flex justify-center">
-            <figure class="w-1/2">
+        <h1 class="my-16 text-6xl font-bold text-center">Encryption Result</h1>
+        <div class="flex flex-col gap-y-4 justify-center my-4">
+            <figure class="w-2/3 mx-auto">
                 <img src="{{ url1 }}" class="w-full" alt="Your image" />
                 <caption>Your image</caption>
             </figure>
-            <figure class="w-1/2">
+            <figure class="w-2/3 mx-auto">
                 <img src="{{ url2 }}" class="w-full" alt="Flag" />
                 <caption>Flag</caption>
             </figure>
         </div>
     </div>
+    <style>
+        img { image-rendering: pixelated; }
+    </style>
 </body>
 </html>
