--- a/ppc-mindCalculator/index.html
+++ b/ppc-mindCalculator/index.html
@@ -12,6 +12,7 @@
         <h1 class="my-16 text-6xl font-bold text-center">Mind Calculator challenge</h1>
         <p class="my-8 text-xl">What is 1 + 2 - 3 + 4? Easy, it’s <output>4</output>. But what about this one?</p>
         <mark class="px-4 py-2 mx-auto my-2 rounded w-fit" id="conn_close" style="display: none;">Connection closed.</mark>
+        <p class="my-2">You have 30 seconds to answer each question once it is loaded.</p>
         <p class="my-2">You have got <span id="counter">0</span> answer(s).</p>
         <button id="start" disabled class="px-4 py-2 rounded bg-cyan-700 hover:bg-cyan-600 disabled:bg-zinc-700 disabled:hover:bg-zinc-700">Start</button>
         <fieldset id="fieldset" style="display: none;">
