--- a/sahuang-oj/index.html
+++ b/sahuang-oj/index.html
@@ -18,19 +18,19 @@
             <header class="sticky top-0 flex flex-col bg-zinc-800 pt-4">
                 <h1 class="text-xs text-white/75 uppercase tracking-wide">Project SEKAI Online Judge</h1>
                 <select name="challenge" id="challenge" class="text-xl font-semibold bg-transparent my-2 border-b border-white/25 text-ellipsis pb-2">
-                    <option value="0">紡ぎ出した言葉通りの重い熱を放て</option>
-                    <option value="1">解答代わりの被れた可能性が</option>
-                    <option value="2">なんでもできる気がする…するだけだ</option>
+                    <option class="bg-zinc-800" value="0">紡ぎ出した言葉通りの重い熱を放て</option>
+                    <option class="bg-zinc-800" value="1">解答代わりの被れた可能性が</option>
+                    <option class="bg-zinc-800" value="2">なんでもできる気がする…するだけだ</option>
                 </select>
                 <a id="challenge-link" class="px-4 py-2 rounded bg-transparent hover:bg-zinc-700 border border-white/25 disabled:bg-zinc-700 disabled:hover:bg-zinc-700 my-2 text-center" href="https://example.com/1.pdf" target="_blank">Download PDF</a>
                 <div class="flex row items-center">
                     <select name="language" id="language" class="bg-transparent my-2 border border-white/25 rounded p-2 grow">
-                        <option value="Python3">Python 3</option>
-                        <option value="C++">C++</option>
-                        <option value="C">C</option>
-                        <option value="Java">Java</option>
-                        <option value="Go">Go</option>
-                        <option value="JavaScript">JavaScript</option>
+                        <option class="bg-zinc-800" value="Python3">Python 3</option>
+                        <option class="bg-zinc-800" value="C++">C++</option>
+                        <option class="bg-zinc-800" value="C">C</option>
+                        <option class="bg-zinc-800" value="Java">Java</option>
+                        <option class="bg-zinc-800" value="Go">Go</option>
+                        <option class="bg-zinc-800" value="JavaScript">JavaScript</option>
                     </select>
                     <div id="compileCommand" data-tippy-content="Execute command:<br><code>python3 <var>{exe_path}</var></code>"><span class="iconify ml-2 text-xl" data-icon="ic:outline-info"></span></div>
                 </div>
